# ChangeLog for app-misc/tracker
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-misc/tracker/ChangeLog,v 1.50 2009/01/09 15:48:02 ranger Exp $

  09 Jan 2009; Brent Baude <ranger@gentoo.org> tracker-0.6.6-r1.ebuild:
  Marking tracker-0.6.6-r1 ppc64 for bug 254034

  11 Oct 2008; Gilles Dartiguelongue <eva@gentoo.org> tracker-0.6.3.ebuild,
  tracker-0.6.6.ebuild, tracker-0.6.6-r1.ebuild, tracker-9999.ebuild:
  Use gmime-2.2*, bug #239412.

  07 Sep 2008; Brent Baude <ranger@gentoo.org> tracker-0.6.6-r1.ebuild:
  Marking tracker-0.6.6-r1 ppc stable for gnome dependancies

  12 Aug 2008; Raúl Porcel <armin76@gentoo.org> tracker-0.6.6-r1.ebuild:
  alpha/ia64/sparc stable wrt #229709

  31 Jul 2008; Ulrich Mueller <ulm@gentoo.org> metadata.xml:
  Add USE flag description to metadata wrt GLEP 56.

*tracker-9999 (30 Jul 2008)

  30 Jul 2008; Gilles Dartiguelongue <eva@gentoo.org> +tracker-9999.ebuild:
  add a live ebuild.

  24 Apr 2008; Markus Rothe <corsair@gentoo.org> tracker-0.6.6-r1.ebuild:
  Added ~ppc64; bug #218794

  22 Apr 2008; Raúl Porcel <armin76@gentoo.org> tracker-0.6.6-r1.ebuild:
  Add ~alpha/~ia64 wrt #218794

  09 Mar 2008; Gilles Dartiguelongue <eva@gentoo.org>
  tracker-0.6.6-r1.ebuild:
  fix tests and use emake at src_install to respect MAKEOPTS

*tracker-0.6.6-r1 (05 Mar 2008)

  05 Mar 2008; Saleem Abdulrasool <compnerd@gentoo.org>
  +tracker-0.6.6-r1.ebuild:
  Force the use of the internal qdbm

  04 Mar 2008; Saleem Abdulrasool <compnerd@gentoo.org>
  -tracker-0.6.4.ebuild, -tracker-0.6.5.ebuild:
  Prune some unused versions

*tracker-0.6.6 (04 Mar 2008)

  04 Mar 2008; Saleem Abdulrasool <compnerd@gentoo.org>
  +tracker-0.6.6.ebuild:
  Version bump from upstream

*tracker-0.6.5 (01 Mar 2008)

  01 Mar 2008; Saleem Abdulrasool <compnerd@gentoo.org>
  +tracker-0.6.5.ebuild:
  Version bump from upstream

  29 Feb 2008; Brent Baude <ranger@gentoo.org> tracker-0.6.4.ebuild: