@@ -1,6 +1,6 @@
 # Copyright 1999-2009 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/gnome-base/nautilus/Attic/nautilus-2.22.5.1-r1.ebuild,v 1.7 2009/01/09 18:11:08 ranger Exp $
+# $Header: /var/cvsroot/gentoo-x86/gnome-base/nautilus/Attic/nautilus-2.22.5.1-r1.ebuild,v 1.8 2009/01/10 16:37:33 maekke Exp $
 
 inherit autotools eutils gnome2 virtualx
 
@@ -9,7 +9,7 @@ HOMEPAGE="http://www.gnome.org/projects/nautilus/"
 
 LICENSE="GPL-2 LGPL-2 FDL-1.1"
 SLOT="0"
-KEYWORDS="alpha ~amd64 ~arm ~hppa ia64 ppc ppc64 ~sh sparc ~x86 ~x86-fbsd"
+KEYWORDS="alpha amd64 ~arm ~hppa ia64 ppc ppc64 ~sh sparc x86 ~x86-fbsd"
 IUSE="beagle gnome tracker"
 
 RDEPEND=">=x11-libs/startup-notification-0.8
