@@ -1,6 +1,9 @@
 # ChangeLog for gnome-base/nautilus
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/gnome-base/nautilus/ChangeLog,v 1.287 2009/01/09 18:11:08 ranger Exp $
+# $Header: /var/cvsroot/gentoo-x86/gnome-base/nautilus/ChangeLog,v 1.288 2009/01/10 16:37:33 maekke Exp $
+
+  10 Jan 2009; Markus Meier <maekke@gentoo.org> nautilus-2.22.5.1-r1.ebuild:
+  amd64/x86 stable, bug #254034
 
   09 Jan 2009; Brent Baude <ranger@gentoo.org> nautilus-2.22.5.1-r1.ebuild:
   Marking nautilus-2.22.5.1-r1 ppc for bug 254034
