@@ -1,6 +1,9 @@
 # ChangeLog for app-misc/tracker
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-misc/tracker/ChangeLog,v 1.50 2009/01/09 15:48:02 ranger Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-misc/tracker/ChangeLog,v 1.51 2009/01/10 16:36:39 maekke Exp $
+
+  10 Jan 2009; Markus Meier <maekke@gentoo.org> tracker-0.6.6-r1.ebuild:
+  amd64/x86 stable, bug #254034
 
   09 Jan 2009; Brent Baude <ranger@gentoo.org> tracker-0.6.6-r1.ebuild:
   Marking tracker-0.6.6-r1 ppc64 for bug 254034
